// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Molecules/Form/Select Knobs 1`] = `
.c2 {
  font-family: 'Lato',Tahoma,sans-serif,arial;
  font-display: swap;
  font-weight: 900;
  font-size: 2.4rem;
  line-height: 3.2rem;
  padding-bottom: 2.4rem;
}

.c3 {
  padding-bottom: 16px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  font-family: 'Lato',Tahoma,sans-serif,arial;
  font-display: swap;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  padding-bottom: 1.6rem;
  position: absolute;
  padding: 0;
  top: 17px;
  left: 16px;
  color: #AFB0B2;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  visibility: hidden;
}

.c8 {
  pointer-events: none;
  position: absolute;
  right: 10px;
  color: #008A83;
}

.c5.c5.c5.c5.c5 {
  font-family: 'Lato',Tahoma,sans-serif,arial;
  font-display: swap;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  padding-bottom: 1.6rem;
  position: relative;
  width: 100%;
  height: 56px;
  padding: 16px 49px 16px 16px;
  border-radius: 3px;
  border: 1px solid #ECECEC;
  -webkit-transition: border-color 200ms ease;
  transition: border-color 200ms ease;
  color: #565A5C;
  background: #FFF;
  cursor: pointer;
  text-overflow: ellipsis;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5.c5.c5.c5.c5:hover {
  border-color: #565A5C;
}

.c5.c5.c5.c5.c5:focus {
  border-width: 2px;
  border-color: #008A83;
  padding: 15px 48px 15px 15px;
}

.c5.c5.c5.c5.c5:focus + .c6 {
  color: #008A83;
}

.c5.c5.c5.c5.c5.errored {
  border-width: 2px;
  border-color: #CC4B3E;
  padding: 15px 48px 15px 15px;
}

.c5.c5.c5.c5.c5.errored + .c6 {
  color: #CC4B3E;
}

.c5.c5.c5.c5.c5:disabled {
  background-color: #FAFAFA;
  border-color: #ECECEC;
  color: #AFB0B2;
}

.c9.c9.c9.c9.c9 {
  font-family: 'Lato',Tahoma,sans-serif,arial;
  font-display: swap;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  padding-bottom: 1.6rem;
  position: relative;
  width: 100%;
  height: 56px;
  padding: 16px 49px 16px 16px;
  border-radius: 3px;
  border: 1px solid #ECECEC;
  -webkit-transition: border-color 200ms ease;
  transition: border-color 200ms ease;
  color: #565A5C;
  background: #FFF;
  cursor: pointer;
  text-overflow: ellipsis;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9 {
  padding-top: 24px;
  padding-bottom: 4px;
}

.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9.c9 + .c6 {
  top: 8px;
  line-height: 1.5;
  font-size: 1.2rem;
  visibility: visible;
}

.c9.c9.c9.c9.c9:hover {
  border-color: #565A5C;
}

.c9.c9.c9.c9.c9:focus {
  border-width: 2px;
  border-color: #008A83;
  padding: 15px 48px 15px 15px;
}

.c9.c9.c9.c9.c9:focus + .c6 {
  color: #008A83;
}

.c9.c9.c9.c9.c9.errored {
  border-width: 2px;
  border-color: #CC4B3E;
  padding: 15px 48px 15px 15px;
}

.c9.c9.c9.c9.c9.errored + .c6 {
  color: #CC4B3E;
}

.c9.c9.c9.c9.c9:disabled {
  background-color: #FAFAFA;
  border-color: #ECECEC;
  color: #AFB0B2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border: 1px solid #adadad;
  border-radius: 6px;
  padding: 20px;
  margin: 0 20px;
}

@media screen and (min-width:768px) {
  .c2 {
    font-size: 3.2rem;
    line-height: 4.4rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      No initial value
    </h2>
    <div
      className="c3"
    >
      <label
        className="c4"
        htmlFor="mySelect"
      >
        <select
          className="c5"
          disabled={false}
          name="mySelect"
          onBlur={[Function]}
          onChange={[Function]}
          value="Select an option"
        >
          <option
            disabled={true}
          >
            Select an option
          </option>
          <option
            disabled={false}
            id="mySelect_option 1"
            value="option 1"
          >
            option 1
          </option>
          <option
            disabled={false}
            id="mySelect_option 2"
            value="option 2"
          >
            option 2
          </option>
          <option
            disabled={false}
            id="mySelect_option 3"
            value="option 3"
          >
            option 3
          </option>
        </select>
        <div
          className="c6 c7"
        >
          Select an option
        </div>
        <div
          className="c8"
        />
      </label>
    </div>
    <hr />
    <div>
      value: 
    </div>
  </div>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      With initial value
    </h2>
    <div
      className="c3"
    >
      <label
        className="c4"
        htmlFor="mySelect2"
      >
        <select
          className="c9"
          disabled={false}
          name="mySelect2"
          onBlur={[Function]}
          onChange={[Function]}
          value="option 2"
        >
          <option
            disabled={true}
          >
            Label
          </option>
          <option
            disabled={false}
            id="mySelect2_option 1"
            value="option 1"
          >
            option 1
          </option>
          <option
            disabled={false}
            id="mySelect2_option 2"
            value="option 2"
          >
            option 2
          </option>
          <option
            disabled={false}
            id="mySelect2_option 3"
            value="option 3"
          >
            option 3
          </option>
        </select>
        <div
          className="c6 c7"
        >
          Label
        </div>
        <div
          className="c8"
        />
      </label>
    </div>
    <hr />
    <div>
      value: 
      option 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Molecules/Form/Select Working example 1`] = `
.c0 {
  padding-bottom: 16px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  font-family: 'Lato',Tahoma,sans-serif,arial;
  font-display: swap;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  padding-bottom: 1.6rem;
  position: absolute;
  padding: 0;
  top: 17px;
  left: 16px;
  color: #AFB0B2;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  visibility: hidden;
}

.c5 {
  pointer-events: none;
  position: absolute;
  right: 10px;
  color: #008A83;
}

.c2.c2.c2.c2.c2 {
  font-family: 'Lato',Tahoma,sans-serif,arial;
  font-display: swap;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  padding-bottom: 1.6rem;
  position: relative;
  width: 100%;
  height: 56px;
  padding: 16px 49px 16px 16px;
  border-radius: 3px;
  border: 1px solid #ECECEC;
  -webkit-transition: border-color 200ms ease;
  transition: border-color 200ms ease;
  color: #565A5C;
  background: #FFF;
  cursor: pointer;
  text-overflow: ellipsis;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2.c2.c2.c2.c2:hover {
  border-color: #565A5C;
}

.c2.c2.c2.c2.c2:focus {
  border-width: 2px;
  border-color: #008A83;
  padding: 15px 48px 15px 15px;
}

.c2.c2.c2.c2.c2:focus + .c3 {
  color: #008A83;
}

.c2.c2.c2.c2.c2.errored {
  border-width: 2px;
  border-color: #CC4B3E;
  padding: 15px 48px 15px 15px;
}

.c2.c2.c2.c2.c2.errored + .c3 {
  color: #CC4B3E;
}

.c2.c2.c2.c2.c2:disabled {
  background-color: #FAFAFA;
  border-color: #ECECEC;
  color: #AFB0B2;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="mySelect"
  >
    <select
      className="c2"
      disabled={false}
      name="mySelect"
      onBlur={[Function]}
      onChange={[Function]}
      value="Label"
    >
      <option
        disabled={true}
      >
        Label
      </option>
      <option
        disabled={false}
        id="mySelect_option 1"
        value="option 1"
      >
        option 1
      </option>
      <option
        disabled={false}
        id="mySelect_option 2"
        value="option 2"
      >
        option 2
      </option>
      <option
        disabled={false}
        id="mySelect_option 3"
        value="option 3"
      >
        option 3
      </option>
    </select>
    <div
      className="c3 c4"
    >
      Label
    </div>
    <div
      className="c5"
    />
  </label>
</div>
`;
